adding a new branch for UFMC feature development based for on file from Carmine Vitiello + some of my modifications

--- a/openair1/SIMULATION/LTE_PHY/Makefile
+++ b/openair1/SIMULATION/LTE_PHY/Makefile
@@ -178,6 +178,10 @@ ulsim : $(OBJ) ulsim.c $(LFDS_DIR)/bin/liblfds611.a #ulsim_form.c
 	@echo "Compiling [ulsim.c]"
 	@$(CC) ulsim.c -o ulsim $(CFLAGS) $(OBJ) $(LFLAGS) 
 
+ufmcsim : $(OBJ) ulsim.c $(LFDS_DIR)/bin/liblfds611.a #ulsim_form.c
+	@echo "Compiling [ufmcsim.c]"
+	@$(CC) ufmcsim.c -o ufmcsim $(CFLAGS) $(OBJ) $(LFLAGS) 
+
 syncsim : $(OBJ) syncsim.c $(LFDS_DIR)/bin/liblfds611.a
 	@echo "Compiling syncsim.c"
 	@$(CC) syncsim.c  -o syncsim $(CFLAGS) $(OBJ) $(LFLAGS) 
