--- a/targets/PROJECTS/GENERIC-LTE-EPC/CONF/enb.band7.tm1.usrpb210.epc.remote.conf
+++ b/targets/PROJECTS/GENERIC-LTE-EPC/CONF/enb.band7.tm1.usrpb210.epc.remote.conf
@@ -6,18 +6,19 @@ eNBs =
 (
  {
     ////////// Identification parameters:
-    eNB_ID    =  0xe00;
+    eNB_ID    =  0xe01;
 
     cell_type =  "CELL_MACRO_ENB";
 
     eNB_name  =  "eNB_Eurecom_LTEBox";
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
-    tracking_area_code  =  "1";
-
+    tracking_area_code  =  "11";
+    
     mobile_country_code =  "208";
-    mobile_network_code =  "92";
-
+    
+    mobile_network_code =  "10";
+    
        ////////// Physical parameters:
 
     component_carriers = (
@@ -34,21 +35,21 @@ eNBs =
         Nid_cell_mbsfn          			      = 0;
         nb_antennas_tx          			      = 1;
         nb_antennas_rx          			      = 1;
-        tx_gain                                            = 90;
-        rx_gain                                            = 125;
-        prach_root              			      = 0;
-        prach_config_index      			      = 0;
-        prach_high_speed        			      = "DISABLE";
-        prach_zero_correlation  			      = 1;
-        prach_freq_offset       			      = 2;
-        pucch_delta_shift       			      = 1;
-        pucch_nRB_CQI           			      = 1;
-        pucch_nCS_AN            			      = 0;
-        pucch_n1_AN             			      = 32;
-        pdsch_referenceSignalPower 			      = -26;
-        pdsch_p_b                  			      = 0;
-        pusch_n_SB                 			      = 1;
-        pusch_enable64QAM          			      = "DISABLE";
+        tx_gain                                = 90;
+        rx_gain                                = 120;
+        prach_root                          = 0;
+        prach_config_index                  = 0;
+        prach_high_speed                    = "DISABLE";
+        prach_zero_correlation              = 1;
+        prach_freq_offset                   = 2;
+        pucch_delta_shift                   = 1;
+        pucch_nRB_CQI                       = 1;
+        pucch_nCS_AN                        = 0;
+        pucch_n1_AN                         = 32;
+        pdsch_referenceSignalPower            = -26;
+        pdsch_p_b                             = 0;
+        pusch_n_SB                            = 1;
+        pusch_enable64QAM                     = "DISABLE";
         pusch_hoppingMode                                  = "interSubFrame";
         pusch_hoppingOffset                                = 0;
         pusch_groupHoppingEnabled  			      = "ENABLE";
@@ -130,18 +131,20 @@ eNBs =
     };
 
     ////////// MME parameters:
-    mme_ip_address      = ( {ipv4 = "192.168.12.170";
-                              ipv6="192:168:30::17";
-                              active="yes";
-                              preference="ipv4";});
+    mme_ip_address      = ( { ipv4       = "192.168.10.169";
+                              ipv6       = "192:168:30::17";
+                              active     = "yes";
+                              preference = "ipv4";
+                            }
+                          );
 
-    NETWORK_INTERFACES :
+    NETWORK_INTERFACES : 
     {
-        ENB_INTERFACE_NAME_FOR_S1_MME            = "eth4";
-        ENB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.12.242/24";
+        ENB_INTERFACE_NAME_FOR_S1_MME            = "eth0";
+        ENB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.10.131/24";
 
-        ENB_INTERFACE_NAME_FOR_S1U               = "eth4";
-        ENB_IPV4_ADDRESS_FOR_S1U                 = "192.168.12.242/24";
+        ENB_INTERFACE_NAME_FOR_S1U               = "eth0";
+        ENB_IPV4_ADDRESS_FOR_S1U                 = "192.168.10.131/24";
         ENB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
